Practica_8/ControlLangParser.py
# Generated from ControlLang.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ControlLangParser ( Parser ):

    grammarFileName = "ControlLang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'='", "';'", "'for'", "'('", "')'", "'switch'", 
                     "'{'", "'}'", "'case'", "':'", "'default'", "'if'", 
                     "'*'", "'/'", "'+'", "'-'", "'<'", "'>'", "'<='", "'>='", 
                     "'=='", "'!='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "ID", "INT", 
                      "WS" ]

    RULE_prog = 0
    RULE_stat = 1
    RULE_assignStat = 2
    RULE_forStat = 3
    RULE_switchStat = 4
    RULE_caseStat = 5
    RULE_defaultStat = 6
    RULE_ifStat = 7
    RULE_block = 8
    RULE_expr = 9

    ruleNames =  [ "prog", "stat", "assignStat", "forStat", "switchStat", 
                   "caseStat", "defaultStat", "ifStat", "block", "expr" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    ID=23
    INT=24
    WS=25

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(ControlLangParser.EOF, 0)

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ControlLangParser.StatContext)
            else:
                return self.getTypedRuleContext(ControlLangParser.StatContext,i)


        def getRuleIndex(self):
            return ControlLangParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)




    def prog(self):

        localctx = ControlLangParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 21 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 20
                self.stat()
                self.state = 23 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 8392776) != 0)):
                    break

            self.state = 25
            self.match(ControlLangParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ControlLangParser.RULE_stat

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ForStatAltContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ControlLangParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def forStat(self):
            return self.getTypedRuleContext(ControlLangParser.ForStatContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForStatAlt" ):
                listener.enterForStatAlt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForStatAlt" ):
                listener.exitForStatAlt(self)


    class IfStatAltContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ControlLangParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ifStat(self):
            return self.getTypedRuleContext(ControlLangParser.IfStatContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStatAlt" ):
                listener.enterIfStatAlt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStatAlt" ):
                listener.exitIfStatAlt(self)


    class SwitchStatAltContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ControlLangParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def switchStat(self):
            return self.getTypedRuleContext(ControlLangParser.SwitchStatContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSwitchStatAlt" ):
                listener.enterSwitchStatAlt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSwitchStatAlt" ):
                listener.exitSwitchStatAlt(self)


    class AssignStatAltContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ControlLangParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def assignStat(self):
            return self.getTypedRuleContext(ControlLangParser.AssignStatContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignStatAlt" ):
                listener.enterAssignStatAlt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignStatAlt" ):
                listener.exitAssignStatAlt(self)



    def stat(self):

        localctx = ControlLangParser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stat)
        try:
            self.state = 31
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [23]:
                localctx = ControlLangParser.AssignStatAltContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 27
                self.assignStat()
                pass
            elif token in [3]:
                localctx = ControlLangParser.ForStatAltContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 28
                self.forStat()
                pass
            elif token in [6]:
                localctx = ControlLangParser.SwitchStatAltContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 29
                self.switchStat()
                pass
            elif token in [12]:
                localctx = ControlLangParser.IfStatAltContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 30
                self.ifStat()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignStatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ControlLangParser.ID, 0)

        def expr(self):
            return self.getTypedRuleContext(ControlLangParser.ExprContext,0)


        def getRuleIndex(self):
            return ControlLangParser.RULE_assignStat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignStat" ):
                listener.enterAssignStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignStat" ):
                listener.exitAssignStat(self)




    def assignStat(self):

        localctx = ControlLangParser.AssignStatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_assignStat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 33
            self.match(ControlLangParser.ID)
            self.state = 34
            self.match(ControlLangParser.T__0)
            self.state = 35
            self.expr(0)
            self.state = 36
            self.match(ControlLangParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForStatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignStat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ControlLangParser.AssignStatContext)
            else:
                return self.getTypedRuleContext(ControlLangParser.AssignStatContext,i)


        def expr(self):
            return self.getTypedRuleContext(ControlLangParser.ExprContext,0)


        def block(self):
            return self.getTypedRuleContext(ControlLangParser.BlockContext,0)


        def getRuleIndex(self):
            return ControlLangParser.RULE_forStat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForStat" ):
                listener.enterForStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForStat" ):
                listener.exitForStat(self)




    def forStat(self):

        localctx = ControlLangParser.ForStatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_forStat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 38
            self.match(ControlLangParser.T__2)
            self.state = 39
            self.match(ControlLangParser.T__3)
            self.state = 40
            self.assignStat()
            self.state = 41
            self.expr(0)
            self.state = 42
            self.match(ControlLangParser.T__1)
            self.state = 43
            self.assignStat()
            self.state = 44
            self.match(ControlLangParser.T__4)
            self.state = 45
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SwitchStatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ControlLangParser.ID, 0)

        def caseStat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ControlLangParser.CaseStatContext)
            else:
                return self.getTypedRuleContext(ControlLangParser.CaseStatContext,i)


        def defaultStat(self):
            return self.getTypedRuleContext(ControlLangParser.DefaultStatContext,0)


        def getRuleIndex(self):
            return ControlLangParser.RULE_switchStat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSwitchStat" ):
                listener.enterSwitchStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSwitchStat" ):
                listener.exitSwitchStat(self)




    def switchStat(self):

        localctx = ControlLangParser.SwitchStatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_switchStat)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47
            self.match(ControlLangParser.T__5)
            self.state = 48
            self.match(ControlLangParser.T__3)
            self.state = 49
            self.match(ControlLangParser.ID)
            self.state = 50
            self.match(ControlLangParser.T__4)
            self.state = 51
            self.match(ControlLangParser.T__6)
            self.state = 53 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 52
                self.caseStat()
                self.state = 55 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==9):
                    break

            self.state = 58
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==11:
                self.state = 57
                self.defaultStat()


            self.state = 60
            self.match(ControlLangParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CaseStatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(ControlLangParser.INT, 0)

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ControlLangParser.StatContext)
            else:
                return self.getTypedRuleContext(ControlLangParser.StatContext,i)


        def getRuleIndex(self):
            return ControlLangParser.RULE_caseStat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCaseStat" ):
                listener.enterCaseStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCaseStat" ):
                listener.exitCaseStat(self)




    def caseStat(self):

        localctx = ControlLangParser.CaseStatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_caseStat)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.match(ControlLangParser.T__8)
            self.state = 63
            self.match(ControlLangParser.INT)
            self.state = 64
            self.match(ControlLangParser.T__9)
            self.state = 66 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 65
                self.stat()
                self.state = 68 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 8392776) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefaultStatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ControlLangParser.StatContext)
            else:
                return self.getTypedRuleContext(ControlLangParser.StatContext,i)


        def getRuleIndex(self):
            return ControlLangParser.RULE_defaultStat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefaultStat" ):
                listener.enterDefaultStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefaultStat" ):
                listener.exitDefaultStat(self)




    def defaultStat(self):

        localctx = ControlLangParser.DefaultStatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_defaultStat)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.match(ControlLangParser.T__10)
            self.state = 71
            self.match(ControlLangParser.T__9)
            self.state = 73 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 72
                self.stat()
                self.state = 75 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 8392776) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(ControlLangParser.ExprContext,0)


        def block(self):
            return self.getTypedRuleContext(ControlLangParser.BlockContext,0)


        def getRuleIndex(self):
            return ControlLangParser.RULE_ifStat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStat" ):
                listener.enterIfStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStat" ):
                listener.exitIfStat(self)




    def ifStat(self):

        localctx = ControlLangParser.IfStatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_ifStat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(ControlLangParser.T__11)
            self.state = 78
            self.match(ControlLangParser.T__3)
            self.state = 79
            self.expr(0)
            self.state = 80
            self.match(ControlLangParser.T__4)
            self.state = 81
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ControlLangParser.StatContext)
            else:
                return self.getTypedRuleContext(ControlLangParser.StatContext,i)


        def getRuleIndex(self):
            return ControlLangParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)




    def block(self):

        localctx = ControlLangParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.match(ControlLangParser.T__6)
            self.state = 85 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 84
                self.stat()
                self.state = 87 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 8392776) != 0)):
                    break

            self.state = 89
            self.match(ControlLangParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ControlLangParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class MulDivExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ControlLangParser.ExprContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ControlLangParser.ExprContext)
            else:
                return self.getTypedRuleContext(ControlLangParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMulDivExpr" ):
                listener.enterMulDivExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMulDivExpr" ):
                listener.exitMulDivExpr(self)


    class IdExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ControlLangParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(ControlLangParser.ID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdExpr" ):
                listener.enterIdExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdExpr" ):
                listener.exitIdExpr(self)


    class RelExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ControlLangParser.ExprContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ControlLangParser.ExprContext)
            else:
                return self.getTypedRuleContext(ControlLangParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRelExpr" ):
                listener.enterRelExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRelExpr" ):
                listener.exitRelExpr(self)


    class IntExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ControlLangParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT(self):
            return self.getToken(ControlLangParser.INT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIntExpr" ):
                listener.enterIntExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIntExpr" ):
                listener.exitIntExpr(self)


    class ParenExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ControlLangParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(ControlLangParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParenExpr" ):
                listener.enterParenExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParenExpr" ):
                listener.exitParenExpr(self)


    class AddSubExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ControlLangParser.ExprContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ControlLangParser.ExprContext)
            else:
                return self.getTypedRuleContext(ControlLangParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAddSubExpr" ):
                listener.enterAddSubExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAddSubExpr" ):
                listener.exitAddSubExpr(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = ControlLangParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 18
        self.enterRecursionRule(localctx, 18, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [24]:
                localctx = ControlLangParser.IntExprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 92
                self.match(ControlLangParser.INT)
                pass
            elif token in [23]:
                localctx = ControlLangParser.IdExprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 93
                self.match(ControlLangParser.ID)
                pass
            elif token in [4]:
                localctx = ControlLangParser.ParenExprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 94
                self.match(ControlLangParser.T__3)
                self.state = 95
                self.expr(0)
                self.state = 96
                self.match(ControlLangParser.T__4)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 111
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 109
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
                    if la_ == 1:
                        localctx = ControlLangParser.MulDivExprContext(self, ControlLangParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 100
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 101
                        localctx.op = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not(_la==13 or _la==14):
                            localctx.op = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 102
                        self.expr(7)
                        pass

                    elif la_ == 2:
                        localctx = ControlLangParser.AddSubExprContext(self, ControlLangParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 103
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 104
                        localctx.op = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not(_la==15 or _la==16):
                            localctx.op = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 105
                        self.expr(6)
                        pass

                    elif la_ == 3:
                        localctx = ControlLangParser.RelExprContext(self, ControlLangParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 106
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 107
                        localctx.op = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 8257536) != 0)):
                            localctx.op = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 108
                        self.expr(5)
                        pass

             
                self.state = 113
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[9] = self.expr_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def expr_sempred(self, localctx:ExprContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 6)
         

            if predIndex == 1:
                return self.precpred(self._ctx, 5)
         

            if predIndex == 2:
                return self.precpred(self._ctx, 4)
         




